[gd_scene load_steps=6 format=3 uid="uid://lcx1058otq1p"]

[ext_resource type="Script" path="res://environment/interactive/win_popup/Win_Popup.gd" id="1_xreuc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jrg0k"]

[sub_resource type="Animation" id="Animation_7ibwb"]
resource_name = "popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gg2qm"]
resource_name = "popup_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ikms"]
_data = {
"popup": SubResource("Animation_7ibwb"),
"popup_end": SubResource("Animation_gg2qm")
}

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.267
anchor_top = 0.296
anchor_right = 0.72
anchor_bottom = 0.711
offset_left = -640.8
offset_top = -319.68
offset_right = -1688.0
offset_bottom = -727.88
script = ExtResource("1_xreuc")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.243137, 0.172549, 0.0705882, 1)
layout_mode = 0
offset_left = 640.0
offset_top = 320.0
offset_right = 1728.0
offset_bottom = 768.0
pivot_offset = Vector2(544, 224)
theme_override_styles/panel = SubResource("StyleBoxFlat_jrg0k")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.268
anchor_right = 0.993
anchor_bottom = 0.518
offset_left = -7.616
offset_top = -16.064
offset_right = 7.61597
offset_bottom = 8.936
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]Winner![/center]"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_4ikms")
}

[node name="ButtonClosePopup" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 440.0
offset_top = 280.0
offset_right = 648.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 50
text = "Confirm"

[node name="ButtonOpenPopup" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1088.0
offset_top = 832.0
offset_right = 1280.0
offset_bottom = 896.0
theme_override_font_sizes/font_size = 30
text = "Open Test"

[connection signal="confirm" from="." to="." method="_on_confirm"]
[connection signal="animation_finished" from="Panel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Panel/ButtonClosePopup" to="." method="_on_button_close_popup_pressed"]
[connection signal="pressed" from="ButtonOpenPopup" to="." method="_on_button_open_popup_pressed"]
